--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <search-bar> </search-bar>
     <hero-section></hero-section>
     <tab-navigation></tab-navigation>
+    <div class="bg-white"></div>
     <main id="mainMenu"></main>
     <button-top></button-top>
     <footer-section></footer-section>
